<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/cmCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_cv_activity_login"
        style="@style/cmLLContentWrapper">

        <TextView
            android:id="@+id/txvLoginActivityHeader"
            style="@style/cmTextView"
            android:text="@string/txvLoginActivityHeader_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_box_font_size" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtUserName"
            style="@style/cmInputBox"
            android:hint="@string/edtUserName_hint"
            android:inputType="text" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtPassWord"
            style="@style/cmInputBox"
            android:hint="@string/edtPassword_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/btnLogIn"
                style="@style/cmButton"
                android:text="@string/btnLogIn_text" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

